feat(docker): подключение контейнера к общей docker-сети приложения

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,4 +12,10 @@ services:
       - ../src:/app/src:ro
     ports:
       - "9002:9002"
+    networks:
+      - docker_localhost
     restart: on-failure
+
+networks:
+  docker_localhost:
+    external: true
