--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,15 +5,19 @@ services:
   sandbox-gcc74:
     build:
       context: ..
+      args:
+        - SANDBOX_USER_UID=999
       dockerfile: ./docker/Dockerfile
     container_name: sandbox-gcc74
     image: sandbox-gcc74
     volumes:
-      - ../src:/app/src:ro
+      - ../src:/app/src
     ports:
       - "9002:9002"
     networks:
       - docker_localhost
+    environment:
+      - SANDBOX_USER_UID=999
     restart: on-failure
 
 networks:
