--- a/src/Pipfile
+++ b/src/Pipfile
@@ -4,11 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pytest = "*"
+pytest-mock = "*"
 
 [packages]
 flask = "*"
 gunicorn = "*"
-flask-cors = "*"
+marshmallow = "*"
 
 [requires]
 python_version = "3.8"
